--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /.vs
 /MyDotNetCoreServerlessWebApp/.vs/MyDotNetCoreServerlessWebApp
 /MyDotNetCoreServerlessWebApp/obj
+/MyDotNetCoreServerlessWebApp/bin
