Containerize the web app and add a CDK app to deploy an ECS Fargate cluster to run the app.

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /MyDotNetCoreServerlessWebApp/.vs/MyDotNetCoreServerlessWebApp
 /MyDotNetCoreServerlessWebApp/obj
 /MyDotNetCoreServerlessWebApp/bin
+/MyDotNetCoreServerlessWebApp/aws-ecs-tools-defaults.json
