--- a/MyDotNetCoreServerlessWebApp/MyDotNetCoreServerlessWebApp.csproj
+++ b/MyDotNetCoreServerlessWebApp/MyDotNetCoreServerlessWebApp.csproj
@@ -3,9 +3,13 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
     <AWSProjectType>Lambda</AWSProjectType>
+    <UserSecretsId>6c5cd64d-7537-486a-8bc5-bbd402e52af9</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerfileContext>.</DockerfileContext>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Amazon.Lambda.AspNetCoreServer" Version="5.1.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="wwwroot\images\" />
